Fixed the quote form bug with JS

--- a/app/views/articles/buisness-services.html.erb
+++ b/app/views/articles/buisness-services.html.erb
@@ -127,27 +127,27 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main nav-onepage">
 									<li class="active"><!-- HOME -->
-										<a href="main-landing-page.html">
+										<a href="main-landing-page">
 											HOME
 										</a>
 									</li>
 									<li><!-- SERVICES -->
-										<a href="main-landing-page.html#services">
+										<a href="main-landing-page#services">
 											SERVICES
 										</a>
 									</li>
 									<li><!-- PORTFOLIO -->
-										<a href="main-landing-page.html#portfolio">
+										<a href="main-landing-page#portfolio">
 											PORTFOLIO
 										</a>
 									</li>
 									<li><!-- NEWS -->
-										<a href="main-landing-page.html#news">
+										<a href="main-landing-page#news">
 											NEWS
 										</a>
 									</li>
 									<li><!-- CLIENTS -->
-										<a href="main-landing-page.html#clients">
+										<a href="main-landing-page#clients">
 											CLIENTS
 										</a>
 									</li>
