--- a/app/views/articles/main-landing-page.html.erb
+++ b/app/views/articles/main-landing-page.html.erb
@@ -114,7 +114,7 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main nav-onepage row">
 									<li><!-- LOGIN BUTTON -->
-										<a class="text-primary font-weight-bold">
+										<a class="text-primary">
 											LOGIN	
 										</a>
 									</li>
@@ -198,7 +198,7 @@
 						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Rocket Elevator">
 							<!-- MAIN IMAGE -->
 							<a alt="cover image"  data-bgposition="center bottom" data-bgfit="cover" data-bgrepeat="no-repeat">
-								<%= image_tag "M.jpg" %>
+								<%= image_tag "M.jpg", class: 'img-fluid' %>
 							</a>
 							<div class="overlay dark-4"><!-- dark overlay [0 to 9 opacity] --></div>
 							<!-- Title of the slide-->
@@ -247,7 +247,7 @@
 								data-endspeed="300"
 
 								style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-red btn-lg" href="request-quote-page.html">GET A QUOTE &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-red btn-lg" href="request-quote-page">GET A QUOTE &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 							<!-- another button -->
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
@@ -271,7 +271,7 @@
 						<li data-transition="parallaxtotop" data-slotamount="7" data-masterspeed="300"  data-saveperformance="off" data-title="Residential Services">
 							<!-- SECOND IMAGE -->
 							<a alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
-								<%= image_tag "AdobeStock_72034307.jpeg" %>
+								<%= image_tag "AdobeStock_72034307.jpeg", class: 'img-fluid' %>
 							</a>
 							<div class="overlay dark-4"><!-- dark overlay [0 to 9 opacity] --></div>
 							<!-- Title of the slide-->
@@ -319,7 +319,7 @@
 								data-endelementdelay="0.1"
 								data-endspeed="500"
 								style="z-index: 4; max-width: auto;">
-									<a class="btn btn-red btn-lg" href="residential-services.html">RESIDENTIAL SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-red btn-lg" href="residential-services">RESIDENTIAL SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 						</li>
 
@@ -327,7 +327,7 @@
 						<li data-transition="parallaxtotop" data-slotamount="7" data-masterspeed="300"  data-saveperformance="off" data-title="Corporate Services">
 							<!-- THIRD IMAGE -->
 							<a alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
-								<%= image_tag "AdobeStock_146216308.jpeg" %>
+								<%= image_tag "AdobeStock_146216308.jpeg", class: 'img-fluid' %>
 							</a>
 							<div class="overlay dark-4"><!-- dark overlay [0 to 9 opacity] --></div>
 							<!-- Title of the slide-->
@@ -376,7 +376,7 @@
 							data-endelementdelay="0.1"
 							data-endspeed="500"
 							style="z-index: 4; max-width: auto;">
-								<a class="btn btn-blue btn-lg" href="buisness-services.html">CORPORATE & COMMERCIAL SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
+								<a class="btn btn-blue btn-lg" href="buisness-services">CORPORATE & COMMERCIAL SERVICES &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 
 						</li>
@@ -396,7 +396,7 @@
 						<div class="col-sm-4">
 							
 							<a class="img-fluid" alt="img">
-								<%= image_tag "AdobeStock_162479912.jpeg" %>
+								<%= image_tag "AdobeStock_162479912.jpeg", class: 'img-fluid' %>
 							</a>
 							<h3 class="mt-10">Previous major projects</h3>
 							<p>Since the beginning of the company, Rocket Elevator has always wanted to go ever further beyond, im sure some of our major projects will truly impress you.</p>
@@ -406,18 +406,18 @@
 						<div class="col-sm-4">
 
 							<a class="img-fluid" alt="img">
-								<%= image_tag "AdobeStock_33298664.jpeg" %>
+								<%= image_tag "AdobeStock_33298664.jpeg", class: 'img-fluid' %>
 							</a>
 							<h3 class="mt-10">Residential Services</h3>
 							<p>Rocket Elevator takes pride in the importance it accords to the quality of its elevator, we guarentee satisfaction.</p>
-							<a href="residential-services.html" class="btn btn-teal">RESIDENTIAL SERVICES</a>
+							<a href="residential-services" class="btn btn-teal">RESIDENTIAL SERVICES</a>
 						</div>
 						<!-- link to the corporate services -->
 						<div class="col-sm-4">
 							<img class="img-fluid" src="AdobeStock_3294993.jpeg" alt="img" />
 							<h3 class="mt-10">Corporate Services</h3>
 							<p>As we said, it is important to us that our customers are truly and fully satisfied of our services, we will always go the extra mile!</p>
-							<a href="buisness-services.html" class="btn btn-teal">CORPORATE SERVICES</a>
+							<a href="buisness-services" class="btn btn-teal">CORPORATE SERVICES</a>
 						</div>
 
 					</div>
@@ -439,7 +439,7 @@
 
 					<div class="text-center">
 						<h2 class="fs-40 fw-300">Rocket Elevator : defying gravity since 1976</h2>
-						<a class="btn btn-green btn-lg" href="request-quote-page.html">REQUEST A QUOTE <i class="fa fa-angle-right"></i></a> 
+						<a class="btn btn-green btn-lg" href="request-quote-page">REQUEST A QUOTE <i class="fa fa-angle-right"></i></a> 
 						&nbsp; OR &nbsp; 
 						<a class="btn btn-yellow btn-lg" href="#contact">CONTACT US <i class="fa fa-angle-right"></i></a>
 					</div>
