--- a/app/views/articles/request-quote-page.html.erb
+++ b/app/views/articles/request-quote-page.html.erb
@@ -23,6 +23,11 @@
 		<!-- PAGE LEVEL SCRIPTS -->
 		<link href="assets/css/header-1.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/color_scheme/green.css" rel="stylesheet" type="text/css" id="color_scheme" />
+
+		<%= javascript_include_tag 'https://code.jquery.com/jquery-3.3.1.slim.min.js' %>
+		<%= javascript_include_tag 'form.estimate.nbrelevator', media: 'all', 'data-turbolinks-track': 'reload' %>
+    	<%= javascript_include_tag 'form.estimate.rates', media: 'all', 'data-turbolinks-track': 'reload' %>
+    	<%= javascript_include_tag 'form.hide.show', media: 'all', 'data-turbolinks-track': 'reload' %>
 	</head>
 
 	<!--
@@ -688,9 +693,9 @@
 		<script src="assets/plugins/jquery/jquery-3.3.1.min.js"></script>
 
 		<script src="assets/js/scripts.js"></script>
-		<script src="Form-hide-show.js"></script>
-		<script src="Form-estimate-nbrelevator.js"></script>
-		<script src="Form-estimate-rates.js"></script>
+		<script src="form.hide.show.js"></script>
+		<script src="form.estimate.nbrelevator.js"></script>
+		<script src="form.estimate.rates.js"></script>
 		<script src="//maps.google.com/maps/api/js?key=AIzaSyCqCn84CgZN6o1Xc3P4dM657HIxkX3jzPY"></script>
 		<script src="assets/plugins/gmaps.js"></script>
 		<script>
