--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,6 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <%= stylesheet_link_tag 'bootstrap',  media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -14,6 +13,12 @@
 
     <%= javascript_include_tag 'jquery.themepunch.revolution.min', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'jquery.themepunch.tools.min', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+    <%= javascript_include_tag 'https://code.jquery.com/jquery-3.3.1.slim.min.js' %>
+  
+    <%= javascript_include_tag 'form.estimate.nbrelevator', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'form.estimate.rates', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'form.hide.show', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
