JS fix to erase the other fields if the building type change

--- a/app/views/application/main-landing-page.html.erb
+++ b/app/views/application/main-landing-page.html.erb
@@ -414,7 +414,7 @@
 						</div>
 						<!-- link to the corporate services -->
 						<div class="col-sm-4">
-							<img class="img-fluid" src="AdobeStock_3294993.jpeg" alt="img" />
+							<%= image_tag "AdobeStock_3294993.jpeg", class: 'img-fluid' %>
 							<h3 class="mt-10">Corporate Services</h3>
 							<p>As we said, it is important to us that our customers are truly and fully satisfied of our services, we will always go the extra mile!</p>
 							<a href="buisness-services" class="btn btn-teal">CORPORATE SERVICES</a>
@@ -490,7 +490,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="Apple park.jpg" alt="">
+										<%= image_tag "Apple park.jpg", class: "img-fluid" %>
 									</figure>
 
 									<div class="item-box-desc">
@@ -521,7 +521,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="Space elevator.jpg" width="600" height="399" alt="">
+										<%= image_tag "Space elevator.jpg", class: "img-fluid" %>
 									</figure>
 
 									<div class="item-box-desc">
@@ -552,7 +552,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="Big appartement elevator.jpg" width="600" height="399" alt="">
+										<%= image_tag "Big appartement elevator.jpg", class: 'img-fluid' %>
 									</figure>
 
 									<div class="item-box-desc">
@@ -583,7 +583,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="ellies.jpg" width="600" height="399" alt="">
+										<%= image_tag "ellies.jpg", class: "img-fluid" %>
 									</figure>
 
 									<div class="item-box-desc">
@@ -614,7 +614,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="ellies.jpg" width="600" height="399" alt="">
+										<%= image_tag "ellies.jpg", class: "img-fluid" %>
 									</figure>
 
 									<div class="item-box-desc">
@@ -645,7 +645,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="Weird appartement elevator.jpg" width="600" height="399" alt="">
+										<%= image_tag "Weird appartement elevator.jpg", class: "img-fluid" %>
 									</figure>
 
 									<div class="item-box-desc">
@@ -677,7 +677,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="Fish elevator.jpg" width="600" height="399" alt="">
+										<%= image_tag "Fish elevator.jpg", class: "img-fluid" %>
 									</figure>
 
 									<div class="item-box-desc">
@@ -708,7 +708,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="CN tower elevator.jpg" width="600" height="399" alt="">
+										<%= image_tag "CN tower elevator.jpg", class: "img-fluid" %>
 									</figure>
 
 									<div class="item-box-desc">
@@ -738,7 +738,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="Disney ride elevator.jpg" width="600" height="399"  alt="">
+										<%= image_tag "Disney ride elevator.jpg", class: "img-fluid" %>
 
 									</figure>
 
@@ -769,7 +769,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="Google.jpg" width="600" height="399"  alt="">
+										<%= image_tag "Google.jpg", class: "img-fluid" %>
 
 									</figure>
 
@@ -800,7 +800,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="Mine Elevator.jpg" width="600" height="399"  alt="">
+										<%= image_tag "Mine Elevator.jpg", class: "img-fluid" %>
 
 									</figure>
 
@@ -830,7 +830,7 @@
 											</span>
 										</span>
 
-										<img class="img-fluid" src="MC elevator.jpg" width="600" height="399"  alt="">
+										<%= image_tag "MC elevator.jpg", class: "img-fluid" %>
 
 									</figure>
 
@@ -861,7 +861,7 @@
 					<div class="owl-carousel text-center owl-testimonial m-0" data-plugin-options='{"singleItem": true, "autoPlay": 3500, "navigation": false, "pagination": true, "transitionStyle":"fade"}'>
 						<div class="testimonial">
 							<figure>
-								<img class="rounded" src="CEO.png" alt="" />
+								<%= image_tag "CEO.png", class: "rounded" %>
 							</figure>
 							<div class="testimonial-content p-0">
 								<p class="lead">With her charisma and her creative ways of leading the compagny, she is the reason why Rocket Elevator is able to stand in the modern world to this day.</p>
@@ -874,7 +874,7 @@
 						</div>
 						<div class="testimonial">
 							<figure>
-								<img class="rounded" src="me and ame uwu.jpg" alt="" />
+								<%= image_tag "me and ame uwu.jpg", class: "rounded" %>
 							</figure>
 							<div class="testimonial-content p-0">
 								<p class="lead">Edouard is a man of focus<br>
@@ -927,7 +927,7 @@
 					<div class="owl-carousel owl-padding-10 buttons-autohide controlls-over" data-plugin-options='{"singleItem": false, "items":"4", "navigation": true, "pagination": false}'>
 						<div class="img-hover">
 							<a href="https://elevatortoday.com/2018/01/18/magic-mirror-for-elevators/">
-								<img class="img-fluid" src="news 0.jpg" alt="">
+								<%= image_tag "news 0.jpg", class: "img-fluid" %>
 							</a>
 
 							<h4 class="text-left mt-20"><a href="https://elevatortoday.com/2018/01/18/magic-mirror-for-elevators/">Magic Mirror Elevator</a></h4>
@@ -947,7 +947,7 @@
 						</div>
 						<div class="img-hover">
 							<a href="https://elevatortoday.com/2020/06/27/schindler-cleancall/">
-								<img class="img-fluid" src="news 1.png" alt="">
+								<%= image_tag "news 1.png", class: "img-fluid" %>
 							</a>
 
 							<h4 class="text-left mt-20"><a href="https://elevatortoday.com/2020/06/27/schindler-cleancall/">Touchless Elevator</a></h4>
@@ -968,7 +968,7 @@
 						</div>
 						<div class="img-hover">
 							<a href="https://elevatortoday.com/2020/12/23/r-i-s-e-now-operational/">
-								<img class="img-fluid" src="news 2.jpg" alt="">
+								<%= image_tag "news 2.jpg", class: "img-fluid" %>
 							</a>
 
 							<h4 class="text-left mt-20"><a href="https://elevatortoday.com/2020/12/23/r-i-s-e-now-operational/">Elevator Builder Robot</a></h4>
@@ -988,7 +988,7 @@
 						</div>
 						<div class="img-hover">
 							<a href="https://globalnews.ca/news/7952570/elevator-problems-lethbridge-apartment/">
-								<img class="img-fluid" src="news 3.jpg" alt="">
+								<%= image_tag "news 3.jpg", class: "img-fluid" %>
 							</a>
 
 							<h4 class="text-left mt-20"><a href="https://globalnews.ca/news/7952570/elevator-problems-lethbridge-apartment/">15 Story Building Elevator Broken For Months</a></h4>
@@ -1008,7 +1008,7 @@
 						</div>
 						<div class="img-hover">
 							<a href="https://globalnews.ca/news/7688766/halifax-wheelchair-user-trapped-elevator-repair/">
-								<img class="img-fluid" src="news4.webp" alt="">
+								<%= image_tag "news4.webp", class: 'img-fluid' %>
 							</a>
 							<h4 class="text-left mt-20"><a href="https://globalnews.ca/news/7688766/halifax-wheelchair-user-trapped-elevator-repair/">Man In Wheelchair Gets Stuck In His Appartement For More Than 2 Weeks</a></h4>
 							<p class="text-left">Adam Denny has been stuck in his appartement for more than 2 weeks because of an outage in their elevator. It is impossible for him to use the stairs because he live on the third floor and cannot use the stairs.</p>
@@ -1027,7 +1027,7 @@
 						</div>
 						<div class="img-hover">
 							<a href="https://elevatorworld.com/events/elevcon/">
-								<img class="img-fluid" src="news5.webp" alt="">
+								<%= image_tag "news5.webp", class: 'img-fluid' %>
 							</a>
 							<h4 class="text-left mt-20"><a href="https://elevatorworld.com/events/elevcon/">Elevecon 2023</a></h4>
 							<p class="text-left">The next Elevcon event will hold from June 20 to June 23 of 2023 at the Grandior Hotel, Prague, Czech Republic.</p>
