--- a/app/views/application/request-quote-page.html.erb
+++ b/app/views/application/request-quote-page.html.erb
@@ -117,27 +117,27 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main nav-onepage">
 									<li class="active"><!-- HOME -->
-										<a href="main-landing-page.html">
+										<%= link_to "HOME PAGE", root_path %>
 											HOME
 										</a>
 									</li>
 									<li><!-- SERVICES -->
-										<a href="main-landing-page.html#services">
+										<a href="/#services">
 											SERVICES
 										</a>
 									</li>
 									<li><!-- PORTFOLIO -->
-										<a href="main-landing-page.html#portfolio">
+										<a href="main-landing-page#portfolio">
 											PORTFOLIO
 										</a>
 									</li>
 									<li><!-- NEWS -->
-										<a href="main-landing-page.html#news">
+										<a href="main-landing-page#news">
 											NEWS
 										</a>
 									</li>
 									<li><!-- CLIENTS -->
-										<a href="main-landing-page.html#clients">
+										<a href="main-landing-page#clients">
 											CLIENTS
 										</a>
 									</li>
