--- a/app/views/quotes/request_quote.html.erb
+++ b/app/views/quotes/request_quote.html.erb
@@ -228,7 +228,7 @@
                                         <br>
                                             <h5>Number of basement floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrBasementsFloors" id="Resnbrbasements" type="number" min="0" value="0" max="1000" class="formelementsRE">
+                                            <input name="nbrBasementsFloorsR" id="Resnbrbasements" type="number" min="0" value="" max="1000" class="formelementsRE">
                                         </div>
                                     </div>
                                     <!-- /Residential-->
@@ -243,12 +243,12 @@
                                         <br>
                                             <h5>Number of floors excluding basements floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrFloors[C]" id="comnbrfloors" type="number" value="" min="0" max="1000" class="formelementsCOM">
+                                            <input name="nbrFloorsC" id="comnbrfloors" type="number" value="" min="0" max="1000" class="formelementsCOM">
                                         </div>
                                         <br>
                                             <h5>Number of basement floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbBasementsFloors" id="comnbrbasements" type="number" value="0" min="0" max="1000" class="formelementsCOM">
+                                            <input name="nbrBasementsFloorsC" id="comnbrbasements" type="number" value="" min="0" max="1000" class="formelementsCOM">
                                         </div>
                                         <br>
                                             <h5>Number of parking space available</h5>
@@ -273,12 +273,12 @@
                                         <br>
                                             <h5>Number of floors excluding basements floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrFloors[Cor]" id="Cnbrfloors" value="" type="number" min="0" max="1000" class="formelementsC">
+                                            <input name="nbrFloorsCor" id="Cnbrfloors" value="" type="number" min="0" max="1000" class="formelementsC">
                                         </div>
                                         <br>
                                             <h5>Number of basement floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbBasementsFloors" id="Cnbrbasements" type="number" value="0" min="0" max="1000" class="formelementsC">
+                                            <input name="nbBasementsFloorsCor" id="Cnbrbasements" type="number" value="" min="0" max="1000" class="formelementsC">
                                         </div>
                                         <br>
                                             <h5>Number of parking space available</h5>
@@ -303,12 +303,12 @@
                                         <br>
                                             <h5>Number of floors excluding basements floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrFloors[H]" id="CHnbrfloors" value="" type="number" min="0" max="1000" class="formelementsCH">
+                                            <input name="nbrFloorsH" id="CHnbrfloors" value="" type="number" min="0" max="1000" class="formelementsCH">
                                         </div>
                                         <br>
                                             <h5>Number of basement floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbBasementsFloors" id="CHnbrbasements" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                            <input name="nbBasementsFloorsH" id="CHnbrbasements" value="" type="number" min="0" max="1000" class="formelementsCH">
                                         </div>
                                         <br>
                                             <h5>Number of parking space available</h5>
