--- a/app/views/quotes/request_quote.html.erb
+++ b/app/views/quotes/request_quote.html.erb
@@ -223,7 +223,7 @@
                                         <br>
                                             <h5>Number of floors excluding basements floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrFloorsR" id="Resnbrfloors" type="number" min="0" value="" max="1000" class="formelementsRE">
+                                            <input name="nbrFloorsR" id="Resnbrfloors" type="number" min="0" value="0" max="1000" class="formelementsRE">
                                         </div>
                                         <br>
                                             <h5>Number of basement floors</h5>
@@ -238,22 +238,22 @@
                                         <br>
                                             <h5>Number of disctinct buisnesses</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrDisBui" id="comnbrbuisnesses" type="number" value="0" min="0" max="1000" class=" formelementsCOM">
+                                            <input name="nbrDisBuiC" id="comnbrbuisnesses" type="number" value="0" min="0" max="1000" class=" formelementsCOM">
                                         </div>
                                         <br>
                                             <h5>Number of floors excluding basements floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrFloorsC" id="comnbrfloors" type="number" value="" min="0" max="1000" class="formelementsCOM">
+                                            <input name="nbrFloorsC" id="comnbrfloors" type="number" value="0" min="0" max="1000" class="formelementsCOM">
                                         </div>
                                         <br>
                                             <h5>Number of basement floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrBasementsFloorsC" id="comnbrbasements" type="number" value="" min="0" max="1000" class="formelementsCOM">
+                                            <input name="nbrBasementsFloorsC" id="comnbrbasements" type="number" value="0" min="0" max="1000" class="formelementsCOM">
                                         </div>
                                         <br>
                                             <h5>Number of parking space available</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrParking" id="comnbrparking" type="number" value="0" min="0" max="1000" class="formelementsCOM">
+                                            <input name="nbrParkingC" id="comnbrparking" type="number" value="0" min="0" max="1000" class="formelementsCOM">
                                         </div>
                                         <br>
                                             <h5>Number of elevator cages to be deployed</h5>
@@ -267,28 +267,28 @@
                                         <br>
                                             <h5>Number of separate tenant compagnies</h5>
                                         <div class="col-md-3">
-                                            <input name="nbDisBui" id="Cnbrbuisnesses" value="0" type="number" min="0" max="1000" class="formelementsC">
+                                            <input name="nbDisBuiCor" id="Cnbrbuisnesses" value="0" type="number" min="0" max="1000" class="formelementsC">
                                         </div>
                 
                                         <br>
                                             <h5>Number of floors excluding basements floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrFloorsCor" id="Cnbrfloors" value="" type="number" min="0" max="1000" class="formelementsC">
+                                            <input name="nbrFloorsCor" id="Cnbrfloors" value="0" type="number" min="0" max="1000" class="formelementsC">
                                         </div>
                                         <br>
                                             <h5>Number of basement floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbBasementsFloorsCor" id="Cnbrbasements" type="number" value="" min="0" max="1000" class="formelementsC">
+                                            <input name="nbBasementsFloorsCor" id="Cnbrbasements" type="number" value="0" min="0" max="1000" class="formelementsC">
                                         </div>
                                         <br>
                                             <h5>Number of parking space available</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrParking" id="Cnbrparking" value="0" type="number" min="0" max="1000" class="formelementsC">
+                                            <input name="nbrParkingCor" id="Cnbrparking" value="0" type="number" min="0" max="1000" class="formelementsC">
                                         </div>
                                         <br>
                                             <h5>Maximum number of occupants per floor</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrOccPerFloor" id="Cmaxnbrpeople" value="0" type="number" min="0" max="1000" class="formelementsC">
+                                            <input name="nbrOccPerFloorCor" id="Cmaxnbrpeople" value="0" type="number" min="0" max="1000" class="formelementsC">
                                         </div>
                 
                                     </div>
@@ -298,12 +298,12 @@
                                         <br>
                                             <h5>Number of disctinct buisnesses</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrDisBui" id="CHnbrbuisnesses" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                            <input name="nbrDisBuiH" id="CHnbrbuisnesses" value="0" type="number" min="0" max="1000" class="formelementsCH">
                                         </div>
                                         <br>
                                             <h5>Number of floors excluding basements floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrFloorsH" id="CHnbrfloors" value="" type="number" min="0" max="1000" class="formelementsCH">
+                                            <input name="nbrFloorsH" id="CHnbrfloors" value="0" type="number" min="0" max="1000" class="formelementsCH">
                                         </div>
                                         <br>
                                             <h5>Number of basement floors</h5>
@@ -313,12 +313,12 @@
                                         <br>
                                             <h5>Number of parking space available</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrParking" id="CHnbrparking" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                            <input name="nbrParkingH" id="CHnbrparking" value="0" type="number" min="0" max="1000" class="formelementsCH">
                                         </div>
                                         <br>
                                             <h5>Maximum number of occupants per floor</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrOccPerFloor" id="CHmaxnbrpeople" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                            <input name="nbrOccPerFloorH" id="CHmaxnbrpeople" value="0" type="number" min="0" max="1000" class="formelementsCH">
                                         </div>
                                         <br>
                                             <h5>Number of hours of activity per day</h5>
