--- a/app/views/quotes/request_quote.html.erb
+++ b/app/views/quotes/request_quote.html.erb
@@ -228,7 +228,7 @@
                                         <br>
                                             <h5>Number of basement floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbrBasementsFloorsR" id="Resnbrbasements" type="number" min="0" value="" max="1000" class="formelementsRE">
+                                            <input name="nbrBasementsFloorsR" id="Resnbrbasements" type="number" min="0" value="0" max="1000" class="formelementsRE">
                                         </div>
                                     </div>
                                     <!-- /Residential-->
@@ -308,7 +308,7 @@
                                         <br>
                                             <h5>Number of basement floors</h5>
                                         <div class="col-md-3">
-                                            <input name="nbBasementsFloorsH" id="CHnbrbasements" value="" type="number" min="0" max="1000" class="formelementsCH">
+                                            <input name="nbBasementsFloorsH" id="CHnbrbasements" value="0" type="number" min="0" max="1000" class="formelementsCH">
                                         </div>
                                         <br>
                                             <h5>Number of parking space available</h5>
