--- a/app/views/application/request-quote-page.html.erb
+++ b/app/views/application/request-quote-page.html.erb
@@ -84,77 +84,7 @@
 
 				Example Usage:  class="clearfix sticky header-sm transparent b-0"
 			-->
-			<div id="header" class="navbar-toggleable-md clearfix sticky">
-
-				<!-- TOP NAV -->
-				<header id="topNav">
-					<div class="container">
-
-						<!-- Mobile Menu Button -->
-						<button class="btn btn-mobile" data-toggle="collapse" data-target=".nav-main-collapse">
-							<i class="fa fa-bars"></i>
-						</button>
-
-						<!-- Logo -->
-						<a class="logo float-left scrollTo" href="#top">
-							<img src=R2.png alt="" />
-						</a>
-
-						<!-- 
-							Top Nav 
-							
-							AVAILABLE CLASSES:
-							submenu-dark = dark sub menu
-						-->
-						<div class="navbar-collapse collapse float-right nav-main-collapse submenu-dark">
-							<nav class="nav-main">
-
-								<!-- 
-									.nav-onepage
-									Required for onepage navigation links
-									
-									Add .external for an external link!
-								-->
-								<ul id="topMain" class="nav nav-pills nav-main nav-onepage">
-									<li class="active"><!-- HOME -->
-										<%= link_to "HOME PAGE", root_path %>
-											HOME
-										</a>
-									</li>
-									<li><!-- SERVICES -->
-										<a href="/#services">
-											SERVICES
-										</a>
-									</li>
-									<li><!-- PORTFOLIO -->
-										<a href="main-landing-page#portfolio">
-											PORTFOLIO
-										</a>
-									</li>
-									<li><!-- NEWS -->
-										<a href="main-landing-page#news">
-											NEWS
-										</a>
-									</li>
-									<li><!-- CLIENTS -->
-										<a href="main-landing-page#clients">
-											CLIENTS
-										</a>
-									</li>
-									<li><!-- CONTACT -->
-										<a href="#contact">
-											CONTACT
-										</a>
-									</li>
-								</ul>
-
-							</nav>
-						</div>	
-					</div>
-				</header>
-				<!-- /Top Nav -->
-
-			</div>
+			
 
 
 			<!-- 
@@ -437,6 +367,11 @@
 						</div>
 						<!-- results -->
 
+						<div class="card card-default">
+							<div class="card-block">
+								<a class="btn btn-block btn-primary">Submit your quote!
+								<a>
+							</div>
 						</div>
 
 					</div>
