--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
 								-->
 								<ul id="topMain" class="nav nav-pills nav-main nav-onepage row">
 									<li><!-- HOME -->
-										<%= link_to 'HOME', '/main-landing-page' ,:class => 'navbar-link' %>
+										<%= link_to 'HOME', 'main' ,:class => 'navbar-link' %>
 									</li>
 									<li><!-- SERVICES -->
 										<a href="#services">
