--- a/app/views/application/request-quote-page.html.erb
+++ b/app/views/application/request-quote-page.html.erb
@@ -123,204 +123,167 @@
 			<!-- /style for the form backgound that's so cooool -->
 
 			<!-- FORM -->
-			<section class="formBGRE">
-				<div class="container">
+            <%= form_tag("/request_quote", method: "post") do %>
+                <section class="formBGRE">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-2 col-sm-2">
+                            </div>
+                            <div class="col-md-8 col-sm-8">
+                            <!-- Fancy Elements -->
+                            <div class="card card-default">
+                                <div class="card-heading card-heading-transparent">
+                                    <h2 class="bold">Request a quote</h2>
+                                </div>
+                                <div id="formSelection" class="card-block">
+                                    <!-- Type of building -->
+                                    <br />
+                                    <div>
+                                        <h4>Please select the type of building</h4>
+                                        <select name="type_of_building" id="formBuilding" class="form-control">
+                                            <option value=""> -- Select -- </option>
+                                            <option value="1">Residential</option>
+                                            <option value="2">Commercial</option>
+                                            <option value="3">Corporate</option>
+                                            <option value="4">Hybrid</option>
+                                        </select>
+                                    </div>
+                                    <!-- /type of building -->
+                                    <!-- Residential -->
+                                    <div id="residentialSelection" onchange="ResultResidentialElevators()">
+                                            <h5>Number of appartement in the building</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrAppBuild" id="Resnbrappartement" type="number" min="0" value="0" max="1000" class="formelementsRE">
+                                        </div>
+                                        <br>
+                                            <h5>Number of floors excluding basements floors</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrFloorsR" id="Resnbrfloors" type="number" min="0" value="0" max="1000" class="formelementsRE">
+                                        </div>
+                                        <br>
+                                            <h5>Number of basement floors</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrBasementsFloorsR" id="Resnbrbasements" type="number" min="0" value="0" max="1000" class="formelementsRE">
+                                        </div>
+                                    </div>
+                                    <!-- /Residential-->
+                                    <!-- Commercial -->
+                                    <div id="commercialSelection">
+
+                                        <br>
+                                            <h5>Number of disctinct buisnesses</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrDisBuiC" id="comnbrbuisnesses" type="number" value="0" min="0" max="1000" class=" formelementsCOM">
+                                        </div>
+                                        <br>
+                                            <h5>Number of floors excluding basements floors</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrFloorsC" id="comnbrfloors" type="number" value="0" min="0" max="1000" class="formelementsCOM">
+                                        </div>
+                                        <br>
+                                            <h5>Number of basement floors</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrBasementsFloorsC" id="comnbrbasements" type="number" value="0" min="0" max="1000" class="formelementsCOM">
+                                        </div>
+                                        <br>
+                                            <h5>Number of parking space available</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrParkingC" id="comnbrparking" type="number" value="0" min="0" max="1000" class="formelementsCOM">
+                                        </div>
+                                        <br>
+                                            <h5>Number of elevator cages to be deployed</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrElevatorCages" id="comnbrcage" type="number" value="0" min="0" max="1000" class="formelementsCOM">
+                                        </div>
+                                    </div>
+                                    <!-- /Commercial -->
+                                    <!-- Corporate -->
+                                    <div id="corporateSelection">
+                                        <br>
+                                            <h5>Number of separate tenant compagnies</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbDisBuiCor" id="Cnbrbuisnesses" value="0" type="number" min="0" max="1000" class="formelementsC">
+                                        </div>
+                
+                                        <br>
+                                            <h5>Number of floors excluding basements floors</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrFloorsCor" id="Cnbrfloors" value="0" type="number" min="0" max="1000" class="formelementsC">
+                                        </div>
+                                        <br>
+                                            <h5>Number of basement floors</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbBasementsFloorsCor" id="Cnbrbasements" type="number" value="0" min="0" max="1000" class="formelementsC">
+                                        </div>
+                                        <br>
+                                            <h5>Number of parking space available</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrParkingCor" id="Cnbrparking" value="0" type="number" min="0" max="1000" class="formelementsC">
+                                        </div>
+                                        <br>
+                                            <h5>Maximum number of occupants per floor</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrOccPerFloorCor" id="Cmaxnbrpeople" value="0" type="number" min="0" max="1000" class="formelementsC">
+                                        </div>
+                
+                                    </div>
+                                    <!-- /Corporate -->
+                                    <!-- hybrid -->
+                                    <div id="hybridSelection">
+                                        <br>
+                                            <h5>Number of disctinct buisnesses</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrDisBuiH" id="CHnbrbuisnesses" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                        </div>
+                                        <br>
+                                            <h5>Number of floors excluding basements floors</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrFloorsH" id="CHnbrfloors" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                        </div>
+                                        <br>
+                                            <h5>Number of basement floors</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbBasementsFloorsH" id="CHnbrbasements" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                        </div>
+                                        <br>
+                                            <h5>Number of parking space available</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrParkingH" id="CHnbrparking" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                        </div>
+                                        <br>
+                                            <h5>Maximum number of occupants per floor</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrOccPerFloorH" id="CHmaxnbrpeople" value="0" type="number" min="0" max="1000" class="formelementsCH">
+                                        </div>
+                                        <br>
+                                            <h5>Number of hours of activity per day</h5>
+                                        <div class="col-md-3">
+                                            <input name="nbrActPerDay" id="CHnbrhours" type="number" min="0" max="24" class="formelementsCH">
+                                        </div>
+                                    </div>
+                                    <!-- /hybrid -->
+                                    <!-- Selection of Service type -->
+                                    <br />
+                                    <div>
+                                        <h4>Please select the type of service</h4>
+                                        <label class="radio" name="type_of_service">
+                                            <input id="standard" type="radio" name="type_of_service" value="Standard" class="serviceSelection">
+                                            <i></i> Standard
+                                        </label>
+                                        <label class="radio" name="type_of_service">
+                                            <input id="premium" type="radio" name="type_of_service" value="Premium" class="serviceSelection">
+                                            <i></i> Premium
+                                        </label>
+                                        <label class="radio" name="type_of_service">
+                                            <input id="excelium" type="radio" name="type_of_service" value="Excelium" class="serviceSelection">
+                                            <i></i> Excelium
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
 
 
-					<div class="row">
 
-						<div class="col-md-2 col-sm-2">
-						</div>
-						<div class="col-md-8 col-sm-8">
-
-
-						<!-- Fancy Elements -->
-
-						<div class="card card-default">
-							<div class="card-heading card-heading-transparent">
-								<h2 class="bold">Request a quote</h2>
-							</div>
-							
-							<div id="formSelection" class="card-block">
-
-								<!-- Type of building -->
-								<br />
-								<div>
-									<h4>Please select the type of building</h4>
-									<select id="formBuilding" class="form-control">
-										<option value="0"> -- Select -- </option>
-										<option value="1">Residential</option>
-										<option value="2">Commercial</option>
-										<option value="3">Corporate</option>
-										<option value="4">Hybrid</option>
-									</select>
-								</div>
-								<!-- /type of building -->
-
-
-								<!-- Residential -->
-								<div id="residentialSelection" onchange="ResultResidentialElevators()">
-
-										<h5>Number of appartement in the building</h5>
-									<div class="col-md-3">
-										<input id="Resnbrappartement" type="number" min="0" value="0" max="1000" class="formelementsRE">
-									</div>
-
-									<br>
-										<h5>Number of floors excluding basements floors</h5>
-									<div class="col-md-3">
-										<input id="Resnbrfloors" type="number" min="0" value="0" max="1000" class="formelementsRE">
-									</div>
-
-									<br>
-										<h5>Number of basement floors</h5>
-									<div class="col-md-3">
-										<input id="Resnbrbasements" type="number" min="0" value="0" max="1000" class="formelementsRE">
-									</div>
-
-								</div>
-								<!-- /Residential-->
-
-
-								<!-- Commercial -->
-								<div id="commercialSelection">
-									
-									<br>
-										<h5>Number of disctinct buisnesses</h5>
-									<div class="col-md-3">
-										<input id="comnbrbuisnesses" type="number" value="0" min="0" max="1000" class=" formelementsCOM">
-									</div>
-
-									<br>
-										<h5>Number of floors excluding basements floors</h5>
-									<div class="col-md-3">
-										<input id="comnbrfloors" type="number" value="0" min="0" max="1000" class="formelementsCOM">
-									</div>
-
-									<br>
-										<h5>Number of basement floors</h5>
-									<div class="col-md-3">
-										<input id="comnbrbasements" type="number" value="0" min="0" max="1000" class="formelementsCOM">
-									</div>
-
-									<br>
-										<h5>Number of parking space available</h5>
-									<div class="col-md-3">
-										<input id="comnbrparking" type="number" value="0" min="0" max="1000" class="formelementsCOM">
-									</div>
-
-									<br>
-										<h5>Number of elevator cages to be deployed</h5>
-									<div class="col-md-3">
-										<input id="comnbrcage" type="number" value="0" min="0" max="1000" class="formelementsCOM">
-									</div>
-
-
-								</div>
-								<!-- /Commercial -->
-
-
-								<!-- Corporate -->
-								<div id="corporateSelection">
-
-									<br>
-										<h5>Number of separate tenant compagnies</h5>
-									<div class="col-md-3">
-										<input id="Cnbrbuisnesses" value="0" type="number" min="0" max="1000" class="formelementsC">
-									</div>
-								
-									<br>
-										<h5>Number of floors excluding basements floors</h5>
-									<div class="col-md-3">
-										<input id="Cnbrfloors" value="0" type="number" min="0" max="1000" class="formelementsC">
-									</div>
-
-									<br>
-										<h5>Number of basement floors</h5>
-									<div class="col-md-3">
-										<input id="Cnbrbasements" type="number" value="0" min="0" max="1000" class="formelementsC">
-									</div>
-
-									<br>
-										<h5>Number of parking space available</h5>
-									<div class="col-md-3">
-										<input id="Cnbrparking" value="0" type="number" min="0" max="1000" class="formelementsC">
-									</div>
-
-									<br>
-										<h5>Maximum number of occupants per floor</h5>
-									<div class="col-md-3">
-										<input id="Cmaxnbrpeople" value="0" type="number" min="0" max="1000" class="formelementsC">
-									</div>
-							
-								</div>
-								<!-- /Corporate -->
-
-
-								<!-- hybrid -->
-								<div id="hybridSelection">
-
-									<br>
-										<h5>Number of disctinct buisnesses</h5>
-									<div class="col-md-3">
-										<input id="CHnbrbuisnesses" value="0" type="number" min="0" max="1000" class="formelementsCH">
-									</div>
-
-									<br>
-										<h5>Number of floors excluding basements floors</h5>
-									<div class="col-md-3">
-										<input id="CHnbrfloors" value="0" type="number" min="0" max="1000" class="formelementsCH">
-									</div>
-
-									<br>
-										<h5>Number of basement floors</h5>
-									<div class="col-md-3">
-										<input id="CHnbrbasements" value="0" type="number" min="0" max="1000" class="formelementsCH">
-									</div>
-
-									<br>
-										<h5>Number of parking space available</h5>
-									<div class="col-md-3">
-										<input id="CHnbrparking" value="0" type="number" min="0" max="1000" class="formelementsCH">
-									</div>
-
-									<br>
-										<h5>Maximum number of occupants per floor</h5>
-									<div class="col-md-3">
-										<input id="CHmaxnbrpeople" value="0" type="number" min="0" max="1000" class="formelementsCH">
-									</div>
-
-									<br>
-										<h5>Number of hours of activity per day</h5>
-									<div class="col-md-3">
-										<input id="CHnbrhours" type="number" min="0" max="24" class="formelementsCH">
-									</div>
-
-								</div>
-								<!-- /hybrid -->
-
-
-								<!-- Selection of Service type -->
-								<br />
-								<div>
-									<h4>Please select the type of service</h4>
-									<label class="radio">
-										<input id="standard" type="radio" name="radio-btn" value="1" class="serviceSelection">
-										<i></i> Standard
-									</label>
-
-									<label class="radio">
-										<input id="premium" type="radio" name="radio-btn" value="1" class="serviceSelection">
-										<i></i> Premium
-									</label>
-
-									<label class="radio">
-										<input id="excelium" type="radio" name="radio-btn" value="1" class="serviceSelection">
-										<i></i> Excelium
-									</label>
-								</div>
-							</div>
-						</div>
 						<!-- /Fancy Elements -->
 
 
@@ -330,10 +293,9 @@
 								<h2 class="bold">Technical estimates</h2>
 							</div>
 							<div class="card-block">
-	
 								<div id="alertnegativenum" class="alert alert-danger margin-bottom-30"><!-- DANGER -->
 									<strong>Ho no!</strong> It would seem you entered an unauthorized value in one of the fields above. (negative numbers)
-								</div>	
+								</div>
 
 								<div>
 									<h4>Number of elevators recommended</h4>
@@ -362,16 +324,14 @@
 										</div>
 									</div>
 								</div>
-	
+
 							</div>
 						</div>
 						<!-- results -->
 
-						<div class="card card-default">
-							<div class="card-block">
-								<a class="btn btn-block btn-primary">Submit your quote!
-								<a>
-							</div>
+						<div >
+							<input id="Btn-center" type="submit" class=" btn btn-shadow-1 btn btn-primary" value="Submit">
+						</div>
 						</div>
 
 					</div>
@@ -379,7 +339,9 @@
 
 				</div>
 			</section>
-			<!-- /Form -->
+
+
+            <% end %>
 
 
 			<!-- CONTACT -->
@@ -397,10 +359,10 @@
 						<div class="col-md-8 col-sm-8">
 
 
-							
+
 							<!--
 								MESSAGES
-								
+
 									How it works?
 									The form data is posted to php/contact.php where the fields are verified!
 									php.contact.php will redirect back here and will add a hash to the end of the URL:
