--- a/app/views/application/mainPage.html.erb
+++ b/app/views/application/mainPage.html.erb
@@ -172,7 +172,7 @@
 								data-endspeed="300"
 
 								style="z-index: 5; max-width: auto; max-height: auto; white-space: nowrap;">
-									<a class="btn btn-red btn-lg" href="request-quote-page">GET A QUOTE &nbsp; <i class="fa fa-angle-right"></i></a>
+									<a class="btn btn-red btn-lg" href="request_quote_page">GET A QUOTE &nbsp; <i class="fa fa-angle-right"></i></a>
 							</div>
 							<!-- another button -->
 							<div class="tp-caption skewfromleft tp-resizeme  un-button-2-lg"
@@ -364,7 +364,7 @@
 
 					<div class="text-center">
 						<h2 class="fs-40 fw-300">Rocket Elevator : defying gravity since 1976</h2>
-						<a class="btn btn-green btn-lg" href="request-quote-page">REQUEST A QUOTE <i class="fa fa-angle-right"></i></a> 
+						<a class="btn btn-green btn-lg" href="request_quote_page">REQUEST A QUOTE <i class="fa fa-angle-right"></i></a> 
 						&nbsp; OR &nbsp; 
 						<a class="btn btn-yellow btn-lg" href="#contact">CONTACT US <i class="fa fa-angle-right"></i></a>
 					</div>
@@ -987,17 +987,17 @@
 					<ul class="row clients-dotted list-inline">
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="https://www.feltface.com">
-								<img class="img-fluid" src="Randy.png" alt="client" />
+								<%= image_tag "Randy.png", class: "img-fluid" %>
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="https://about.google">
-								<img class="img-fluid" src="google.png" alt="client" />
+								<%= image_tag "google.png", class: "img-fluid" %>
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="https://www.apple.com/ca/fr/">
-								<img class="img-fluid" src="apple_1.png" alt="client" />
+								<%= image_tag "apple_1.png", class: "img-fluid" %>
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
