--- a/app/views/elevators/_form.html.erb
+++ b/app/views/elevators/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :type %>
-    <%= form.text_field :type %>
+    <%= form.label :elevator_status %>
+    <%= form.text_field :elevator_status %>
   </div>
 
   <div class="field">
