--- a/app/views/elevators/index.html.erb
+++ b/app/views/elevators/index.html.erb
@@ -8,7 +8,7 @@
       <th>Column</th>
       <th>Serial nb</th>
       <th>Model</th>
-      <th>Type</th>
+      <th>Elevator Status</th>
       <th>Date commissioning</th>
       <th>Date last inspection</th>
       <th>Certificate inspection</th>
@@ -24,7 +24,7 @@
         <td><%= elevator.column %></td>
         <td><%= elevator.serial_nb %></td>
         <td><%= elevator.model %></td>
-        <td><%= elevator.type %></td>
+        <td><%= elevator.elevator_status %></td>
         <td><%= elevator.date_commissioning %></td>
         <td><%= elevator.date_last_inspection %></td>
         <td><%= elevator.certificate_inspection %></td>
