--- a/app/views/elevators/show.html.erb
+++ b/app/views/elevators/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @elevator.type %>
+  <strong>Status:</strong>
+  <%= @elevator.elevator_status %>
 </p>
 
 <p>
