--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -58,6 +58,11 @@
                                         CONTACT
                                     </a>
                                 </li>
+                                <li><!-- INTERVENTIONS -->
+                                    <a href="/interventions/new">
+                                        INTERVENTIONS
+                                    </a>
+                                </li>
                             </ul>
 
                         </nav>
